[package]
name = "tokio-console"
version = "0.1.9"
license = "MIT"
repository = "https://github.com/tokio-rs/console"
edition = "2021"
rust-version = "1.64.0"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Tokio Contributors <team@tokio.rs>",]
readme = "README.md"
default-run = "tokio-console"
homepage = "https://github.com/tokio-rs/console/tree/main/tokio-console" 
description = """
The Tokio console: a debugger for async Rust.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "command-line-utilities",
    "asynchronous",
]
keywords = [
    "tracing",
    "tokio-console",
    "debugging",
    "console",
    "async",
]

[dependencies]
atty = "0.2"
clap = { version = "3", features = ["cargo", "derive", "env"] }
clap_complete = "3"
color-eyre = { version = "0.6", features = ["issue-url"] }
console-api = { version = "0.5.0", path = "../console-api", features = ["transport"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
dirs = "4"
futures = "0.3"
h2 = "0.3"
hdrhistogram = { version = "7.3.0", default-features = false, features = ["serialization"] }
humantime = "2.1.0"
once_cell = "1.8"
prost-types = "0.12"
ratatui = { version = "0.20.1", default-features = false, features = ["crossterm"] }
regex = "1.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
toml = "0.5"
tonic = { version = "0.10", features = ["transport"] }
tower = "0.4.12"
tracing = "0.1"
tracing-journald = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }